--- a/database/docker-compose.yaml
+++ b/database/docker-compose.yaml
@@ -1,4 +1,4 @@
-# Compose file to set up invoice management database database. THe database has tables that records customer order details.
+# Compose file to set up database, kafka and flink environments.
 
 version: "3.9"
 
@@ -11,3 +11,45 @@ services:
       POSTGRES_DB: database
     ports:
       - "5432:5432"
+  
+  zookeeper:
+    image: 'bitnami/zookeeper'
+    ports:
+      - '2181:2181'
+    environment:
+      - ALLOW_ANONYMOUS_LOGIN=yes
+
+  kafka:
+    image: 'bitnami/kafka'
+    ports:
+      - '9092:9092'
+    environment:
+      - KAFKA_BROKER_ID=1
+      - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092
+      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://127.0.0.1:9092
+      - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper:2181
+      - ALLOW_PLAINTEXT_LISTENER=yes
+    depends_on:
+      - zookeeper
+    
+  flink-jobmanager:
+    image: apache/flink:1.17.0
+    container_name: flink-jobmanager
+    expose:
+      - "8081"
+    ports:
+      - "8081:8081"
+    command: jobmanager
+
+  flink-taskmanager:
+    image: apache/flink:1.17.0
+    container_name: flink-taskmanager
+    depends_on:
+      - flink-jobmanager
+    expose:
+      - "6123"
+      - "6124"
+    command: taskmanager
+    environment:
+      - JOB_MANAGER_RPC_ADDRESS=flink-jobmanager
+
